--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,7 @@ jobs:
           node-version: '20.x'
       - run: yarn --frozen-lockfile
       - run: yarn build
-      - run: yarn test
+      - name: Run Integration Tests
+        run: yarn test
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
