--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@virtoshi/api",
   "version": "1.0.0",
   "description": "Simulate transactions witht the Virtoshi API",
-  "main": "index.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -16,6 +16,10 @@
   "dependencies": {
     "minimalistic-assert": "^1.0.1"
   },
+  "files": [
+    "lib/",
+    "*.md"
+  ],
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
